Attempt Fix To Prevent Overlap Of .explanation-text When Resize

--- a/public/styles.css
+++ b/public/styles.css
@@ -61,14 +61,15 @@ textarea {
 .grid {
   display: grid;
   grid-template-columns: 20% 55% 25%;
-  grid-template-rows: 60px 170px 320px 75px 115px;
+  grid-template-rows: 50px 170px 320px 75px 115px;
 }
 
 .grid-title {
+  /* background-color: red; */
   padding-left: 5%;
   grid-column: 1 / 4;
   grid-row: 1;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bolder;
   font-size: 125%;
@@ -87,6 +88,7 @@ textarea {
 }
 
 .grid-text {
+  /* background-color: green; */
   grid-column: 2 / 3;
   margin-bottom: 2%;
   margin-left: 6%;
@@ -155,7 +157,7 @@ textarea {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
   line-height: 1.6em;
-  height: 100px;
+  height: 80px;
   overflow: auto;
 }
 
@@ -208,13 +210,15 @@ textarea {
 
 .thought-bubble {
   position: relative;
-  top: -9px;
+  top: -3px;
 }
 
 .you-are {
   font-size: 220%;
   font-weight: 900;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  overflow: auto;
+  height: 80px;
 
 }
 
